crates/test-files/fixtures/compile_errors/invalid_block_field.fe
contract Foo:

  pub def foo():
    block.foo